[workspace]
members = [
    "analyzer",
    "parser",
]

[package]
name = "elm_rust"
version = "0.1.0"
authors = ["Ivan Xu <info@chivalrystudio.com>"]
edition = "2018"

[dependencies]
rustelm-parser = {path = "./parser", version = "0.1.0"}
rustelm-analyzer = {path = "./analyzer", version = "0.1.0"}

clap = "2.33.0"
ansi_term = "0.12.1"