[package]
name = "rustelm-parser"
version = "0.1.0"
authors = ["Ivan Xu <info@chivalrystudio.com>"]
build = "build.rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.17.2"

[dependencies]
lalrpop-util = "0.17.2"
regex = "1.3.4"
num-traits = "0.2.11"
num-bigint = "0.2"
